Added design/publish-time ClickCounter widget example for React.

--- a/src/components/click-counter/ko/clickCounterEditor.html
+++ b/src/components/click-counter/ko/clickCounterEditor.html
@@ -7,6 +7,6 @@
             <button class="btn btn-info" type="button"
                 data-bind="tooltip: 'Initial value that needs to be set to click counter.'"></button>
         </label>
-        <input type="number" class="form-control" data-bind="value: initialCount" min="0" />
+        <input type="number" class="form-control" data-bind="textInput: initialCount" min="0" />
     </div>
 </div>
