Rob-I306: Prepare Portal Structure (Paperbits side) - done

--- a/src/themes/designer/styles/workshops.scss
+++ b/src/themes/designer/styles/workshops.scss
@@ -60,9 +60,16 @@
 .toolbox.workshops-container {
     z-index: $z-index-base;
     min-height: 370px;
+    display: none !important;
 
     .journey-container {
         padding: 10px 20px;
+    }
+}
+
+tray.toolbox {
+    div.toolbox-btn {
+        display: none;
     }
 }
 
