--- a/src/themes/website/styles/layouts.scss
+++ b/src/themes/website/styles/layouts.scss
@@ -10,6 +10,11 @@ html {
     flex-direction: column;
 }
 
+html {
+    padding: 20px;
+    background: #f5f5f7 !important;
+}
+
 .container {
     width: 100%;
     padding-right: 15px;
