--- a/src/themes/website/styles/utils.scss
+++ b/src/themes/website/styles/utils.scss
@@ -18,3 +18,17 @@
     position: absolute;
     margin: 0 5px;
 }
+
+property,
+.text-variable-field {
+    background: #F5F5F7;
+    margin: 0 4px;
+    padding: 3px 8px;
+    color: #8294BA;
+    border: 1px solid #A9B8D6;
+    border-radius: 4px;
+
+    &::before {
+        content: attr(placeholder);
+    }
+}
