--- a/src/themes/website/styles/utils.scss
+++ b/src/themes/website/styles/utils.scss
@@ -22,7 +22,7 @@
 property,
 .text-variable-field {
     background: #F5F5F7;
-    margin: 0 4px;
+    margin: 0;
     padding: 3px 8px;
     color: #8294BA;
     border: 1px solid #A9B8D6;
