--- a/src/themes/website/styles/layouts.scss
+++ b/src/themes/website/styles/layouts.scss
@@ -1,50 +1,50 @@
 * {
-    position: relative;
+  position: relative;
 }
 
 body,
 html {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+  height: auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 html {
-    padding: 20px;
-    background: #f5f5f7 !important;
+  padding: 20px;
+  background: #f5f5f7 !important;
 }
 
 .container {
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 @media (min-width: 576px) {
-    .container {
-        max-width: 540px;
-    }
+  .container {
+    max-width: 540px;
+  }
 }
 
 @media (min-width: 768px) {
-    .container {
-        max-width: 720px;
-    }
+  .container {
+    max-width: 720px;
+  }
 }
 
 @media (min-width: 992px) {
-    .container {
-        max-width: 960px;
-    }
+  .container {
+    max-width: 960px;
+  }
 }
 
 @media (min-width: 1200px) {
-    .container {
-        max-width: 1140px;
-    }
+  .container {
+    max-width: 1140px;
+  }
 }
 
 .container-fluid,
@@ -52,52 +52,52 @@ html {
 .container-md,
 .container-lg,
 .container-xl {
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 @media (min-width: 576px) {
-    .container,
-    .container-sm {
-        max-width: 540px;
-    }
+  .container,
+  .container-sm {
+    max-width: 540px;
+  }
 }
 
 @media (min-width: 768px) {
-    .container,
-    .container-sm,
-    .container-md {
-        max-width: 720px;
-    }
+  .container,
+  .container-sm,
+  .container-md {
+    max-width: 720px;
+  }
 }
 
 @media (min-width: 992px) {
-    .container,
-    .container-sm,
-    .container-md,
-    .container-lg {
-        max-width: 960px;
-    }
+  .container,
+  .container-sm,
+  .container-md,
+  .container-lg {
+    max-width: 960px;
+  }
 }
 
 @media (min-width: 1200px) {
-    .container,
-    .container-sm,
-    .container-md,
-    .container-lg,
-    .container-xl {
-        max-width: 1140px;
-    }
+  .container,
+  .container-sm,
+  .container-md,
+  .container-lg,
+  .container-xl {
+    max-width: 1140px;
+  }
 }
 
 .row {
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
 }
 
 .col-1,
@@ -170,292 +170,292 @@ html {
 .col-xl-12,
 .col-xl,
 .col-xl-auto {
-    position: relative;
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
+  position: relative;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 .col {
-    flex-basis: 0;
-    flex-grow: 1;
-    max-width: 100%;
+  flex-basis: 0;
+  flex-grow: 1;
+  max-width: 100%;
 }
 
 .row-cols-1 > * {
-    flex: 0 0 100%;
-    max-width: 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
 }
 
 .row-cols-2 > * {
-    flex: 0 0 50%;
-    max-width: 50%;
+  flex: 0 0 50%;
+  max-width: 50%;
 }
 
 .row-cols-3 > * {
-    flex: 0 0 33.333333%;
-    max-width: 33.333333%;
+  flex: 0 0 33.333333%;
+  max-width: 33.333333%;
 }
 
 .row-cols-4 > * {
-    flex: 0 0 25%;
-    max-width: 25%;
+  flex: 0 0 25%;
+  max-width: 25%;
 }
 
 .row-cols-5 > * {
-    flex: 0 0 20%;
-    max-width: 20%;
+  flex: 0 0 20%;
+  max-width: 20%;
 }
 
 .row-cols-6 > * {
-    flex: 0 0 16.666667%;
-    max-width: 16.666667%;
+  flex: 0 0 16.666667%;
+  max-width: 16.666667%;
 }
 
 .col-auto {
-    flex: 0 0 auto;
-    width: auto;
-    max-width: 100%;
+  flex: 0 0 auto;
+  width: auto;
+  max-width: 100%;
 }
 
 .col-1 {
-    flex: 0 0 8.333333%;
-    max-width: 8.333333%;
+  flex: 0 0 8.333333%;
+  max-width: 8.333333%;
 }
 
 .col-2 {
-    flex: 0 0 16.666667%;
-    max-width: 16.666667%;
+  flex: 0 0 16.666667%;
+  max-width: 16.666667%;
 }
 
 .col-3 {
-    flex: 0 0 25%;
-    max-width: 25%;
+  flex: 0 0 25%;
+  max-width: 25%;
 }
 
 .col-4 {
-    flex: 0 0 33.333333%;
-    max-width: 33.333333%;
+  flex: 0 0 33.333333%;
+  max-width: 33.333333%;
 }
 
 .col-5 {
-    flex: 0 0 41.666667%;
-    max-width: 41.666667%;
+  flex: 0 0 41.666667%;
+  max-width: 41.666667%;
 }
 
 .col-6 {
-    flex: 0 0 50%;
-    max-width: 50%;
+  flex: 0 0 50%;
+  max-width: 50%;
 }
 
 .col-7 {
-    flex: 0 0 58.333333%;
-    max-width: 58.333333%;
+  flex: 0 0 58.333333%;
+  max-width: 58.333333%;
 }
 
 .col-8 {
-    flex: 0 0 66.666667%;
-    max-width: 66.666667%;
+  flex: 0 0 66.666667%;
+  max-width: 66.666667%;
 }
 
 .col-9 {
-    flex: 0 0 75%;
-    max-width: 75%;
+  flex: 0 0 75%;
+  max-width: 75%;
 }
 
 .col-10 {
-    flex: 0 0 83.333333%;
-    max-width: 83.333333%;
+  flex: 0 0 83.333333%;
+  max-width: 83.333333%;
 }
 
 .col-11 {
-    flex: 0 0 91.666667%;
-    max-width: 91.666667%;
+  flex: 0 0 91.666667%;
+  max-width: 91.666667%;
 }
 
 .col-12 {
-    flex: 0 0 100%;
-    max-width: 100%;
+  flex: 0 0 100%;
+  max-width: 100%;
 }
 
 @media (min-width: 768px) {
-    .col-md {
-        flex-basis: 0;
-        flex-grow: 1;
-        max-width: 100%;
-    }
-    .row-cols-md-1 > * {
-        flex: 0 0 100%;
-        max-width: 100%;
-    }
-    .row-cols-md-2 > * {
-        flex: 0 0 50%;
-        max-width: 50%;
-    }
-    .row-cols-md-3 > * {
-        flex: 0 0 33.333333%;
-        max-width: 33.333333%;
-    }
-    .row-cols-md-4 > * {
-        flex: 0 0 25%;
-        max-width: 25%;
-    }
-    .row-cols-md-5 > * {
-        flex: 0 0 20%;
-        max-width: 20%;
-    }
-    .row-cols-md-6 > * {
-        flex: 0 0 16.666667%;
-        max-width: 16.666667%;
-    }
-    .col-md-auto {
-        flex: 0 0 auto;
-        width: auto;
-        max-width: 100%;
-    }
-    .col-md-1 {
-        flex: 0 0 8.333333%;
-        max-width: 8.333333%;
-    }
-    .col-md-2 {
-        flex: 0 0 16.666667%;
-        max-width: 16.666667%;
-    }
-    .col-md-3 {
-        flex: 0 0 25%;
-        max-width: 25%;
-    }
-    .col-md-4 {
-        flex: 0 0 33.333333%;
-        max-width: 33.333333%;
-    }
-    .col-md-5 {
-        flex: 0 0 41.666667%;
-        max-width: 41.666667%;
-    }
-    .col-md-6 {
-        flex: 0 0 50%;
-        max-width: 50%;
-    }
-    .col-md-7 {
-        flex: 0 0 58.333333%;
-        max-width: 58.333333%;
-    }
-    .col-md-8 {
-        flex: 0 0 66.666667%;
-        max-width: 66.666667%;
-    }
-    .col-md-9 {
-        flex: 0 0 75%;
-        max-width: 75%;
-    }
-    .col-md-10 {
-        flex: 0 0 83.333333%;
-        max-width: 83.333333%;
-    }
-    .col-md-11 {
-        flex: 0 0 91.666667%;
-        max-width: 91.666667%;
-    }
-    .col-md-12 {
-        flex: 0 0 100%;
-        max-width: 100%;
-    }
+  .col-md {
+    flex-basis: 0;
+    flex-grow: 1;
+    max-width: 100%;
+  }
+  .row-cols-md-1 > * {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+  .row-cols-md-2 > * {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+  .row-cols-md-3 > * {
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+  }
+  .row-cols-md-4 > * {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+  .row-cols-md-5 > * {
+    flex: 0 0 20%;
+    max-width: 20%;
+  }
+  .row-cols-md-6 > * {
+    flex: 0 0 16.666667%;
+    max-width: 16.666667%;
+  }
+  .col-md-auto {
+    flex: 0 0 auto;
+    width: auto;
+    max-width: 100%;
+  }
+  .col-md-1 {
+    flex: 0 0 8.333333%;
+    max-width: 8.333333%;
+  }
+  .col-md-2 {
+    flex: 0 0 16.666667%;
+    max-width: 16.666667%;
+  }
+  .col-md-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+  .col-md-4 {
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+  }
+  .col-md-5 {
+    flex: 0 0 41.666667%;
+    max-width: 41.666667%;
+  }
+  .col-md-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+  .col-md-7 {
+    flex: 0 0 58.333333%;
+    max-width: 58.333333%;
+  }
+  .col-md-8 {
+    flex: 0 0 66.666667%;
+    max-width: 66.666667%;
+  }
+  .col-md-9 {
+    flex: 0 0 75%;
+    max-width: 75%;
+  }
+  .col-md-10 {
+    flex: 0 0 83.333333%;
+    max-width: 83.333333%;
+  }
+  .col-md-11 {
+    flex: 0 0 91.666667%;
+    max-width: 91.666667%;
+  }
+  .col-md-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
 }
 
 section {
-    display: flex;
-    flex-direction: column;
-    flex: none;
+  display: flex;
+  flex-direction: column;
+  flex: none;
 
-    .row {
-        padding: 10px;
-        min-height: 90px;
-        flex: 1;
+  .row {
+    padding: 10px;
+    min-height: 90px;
+    flex: 1;
 
-        .col {
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            align-items: flex-start;
-        }
+    .col {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      align-items: flex-start;
     }
+  }
 
-    /* TODO: Enable row height through editor */
-    &.stretch > .container,
-    .container-fluid > .row {
-        flex: 1;
-    }
+  /* TODO: Enable row height through editor */
+  &.stretch > .container,
+  .container-fluid > .row {
+    flex: 1;
+  }
 }
 
 .stretch {
-    flex: 1;
-    height: 100%;
+  flex: 1;
+  height: 100%;
 }
 
 .overflow {
-    overflow: auto;
+  overflow: auto;
 }
 
 .overflow-x {
-    overflow-x: auto;
+  overflow-x: auto;
 }
 
 .overflow-y {
-    overflow-y: auto;
+  overflow-y: auto;
 }
 
 .sticky-top {
-    position: sticky;
-    top: 0;
-    z-index: 1020;
+  position: sticky;
+  top: 0;
+  z-index: 1020;
 }
 
 .sticky-bottom {
-    position: sticky;
-    bottom: 0;
-    z-index: 1020;
+  position: sticky;
+  bottom: 0;
+  z-index: 1020;
 }
 
 .fit {
-    @include fit;
-    flex: 1 1 auto;
+  @include fit;
+  flex: 1 1 auto;
 }
 
 layout,
 main {
-    flex: 1;
-    flex-direction: column;
-    display: flex;
+  flex: 1;
+  flex-direction: column;
+  display: flex;
 }
 
 .block {
-    display: block;
-    flex-basis: 100%;
-    max-width: 100%;
+  display: block;
+  flex-basis: 100%;
+  max-width: 100%;
 
-    & > * {
-        max-width: 100%;
-    }
+  & > * {
+    max-width: 100%;
+  }
 }
 
 .inline-block {
-    display: inline-block;
-    flex-basis: auto;
-    max-width: 100%;
+  display: inline-block;
+  flex-basis: auto;
+  max-width: 100%;
 
-    & > * {
-        max-width: 100%;
-    }
+  & > * {
+    max-width: 100%;
+  }
 }
 
 .legacy {
-    flex: 1;
+  flex: 1;
 }
 
 html:not([amp4ads]),
 html:not([amp4ads]) body {
-    min-height: 100%;
-    display: flex;
-    flex: 1;
+  min-height: 100%;
+  display: flex;
+  flex: 1;
 }
