Change size of widget box for Brand Logo and Partner Logo in Paperbits

--- a/src/components/brand-logo/ko/brandLogo.html
+++ b/src/components/brand-logo/ko/brandLogo.html
@@ -1,4 +1,3 @@
-
 <div>
-    <brand-logo-runtime class="w-100" data-bind="attr: { params: runtimeConfig }, width: width, height: height"></brand-logo-runtime>
+  <brand-logo-runtime class="w-100" data-bind="attr: { params: runtimeConfig }, width: width"></brand-logo-runtime>
 </div>
