--- a/src/components/partner-logo/ko/partnerLogo.html
+++ b/src/components/partner-logo/ko/partnerLogo.html
@@ -1,4 +1,3 @@
-
 <div>
-    <partner-logo-runtime class="w-100" data-bind="attr: { params: runtimeConfig }, width: width, height: height"></partner-logo-runtime>
+  <partner-logo-runtime class="w-100" data-bind="attr: { params: runtimeConfig }, width: width "></partner-logo-runtime>
 </div>
